fix header nav elements alignment & add jumbo img

--- a/css/index.css
+++ b/css/index.css
@@ -154,19 +154,28 @@ p {
 
 .header-container {
     width: 100%;
-    height: 70px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .header-nav {
     height: 100%;
+    width: 90%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 
 .header-nav a {
     color: #000;
     text-decoration: none;
+}
+
+.jumbo-img {
+    width: 100%;
+    padding: 40px 0 20px 0;
 }
 
 .container {
